# NAWVi

./: .gitignore  README.md  meson.build
PKGBUILD/: PKGBUILD
data/: com.github.ptolemy7.NAWVi.desktop  gschema.xml  meson.buil  meson.build
flatpak/: com.github.ptolemy7.NAWVI.json
meson/: post_install.py
src/: helper_script.sh  index.html  index.php  main.vala  meson.build  nawvi-wiki-search  nawvi_helper_script
